# rnd.devtools

bootstrapping/: repo-recon.md
common/: README.md
common/bootstrapping/: repo-recon.md
common/commands/: devlog-compact.md  devlog-create.md  epistemic.md
common/hooks/ManualTrigger/: epistemic-hook.md
common/mcp/log-efficient-mcp/: README.md  server.py
common/mcp/log-efficient-mcp/tests/: _server_loader.py  test_handoff_instructions.py
common/mcp/log-efficient-mcp/tools/: __init__.py  file_reckoning.py  handoff_instructions.py
common/mcp/log-recon-mcp/: README.md  mcp_app.py  pyproject.toml  server.py
common/mcp/log-recon-mcp/tests/: test_file_reckoning.py  test_health.py  test_script_runna.py
common/mcp/log-recon-mcp/tools/: __init__.py  file_reckoning.py  health.py  script_runna.py
hooks/: context-bootstrapping-hook.md
hooks/ManualTrigger/: epistemic-hook.md
mcp/log-recon-mcp/: mcp_app.py  pyproject.toml  server.py
mcp/log-recon-mcp/tests/: test_file_reckoning.py
mcp/log-recon-mcp/tools/: file_reckoning.py  health.py  script_runna.py
plugins/: README.md
plugins/reasoningbank/hooks/SessionEnd/: reasoningbank-skill-opportunity-hook.md
plugins/reasoningbank/hooks/SessionStart/: reasoningbank-session-link-hook.md
plugins/reasoningbank/skills/reasoningbank-high-signal/: SKILL.md
rules/: secure-coding-rule.md
skills/reasoningbank-high-signal/: SKILL.md
skills/reasoningbank-high-signal/references/: high-signal-rubric.md
skills/reasoningbank-high-signal/scripts/: create_reasoningbank_entry.py
(+4 files in other folders)
